fix menu positioning on mobile

--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,9 +1,8 @@
 .figment-menu-container {
-	z-index: 111111;
 	position: absolute;
 	border-radius: 7px;
 	overflow: hidden;
-	box-shadow: 0px 5px 25px #000000a3;
+	outline: 1px solid var(--button-outline-color)
 }
 
 .figment-menu {
@@ -11,8 +10,6 @@
 	font-size: medium;
 	line-height: normal;
 	cursor: default;
-	color: black;
-	background: white;
 	max-height: inherit;
 	max-width: 50svw;
 	margin: 0;
@@ -21,19 +18,19 @@
 	max-height: 10em;
 	overflow-y: auto;
 	color-scheme: auto;
+	backdrop-filter: blur(10px) contrast(0.5);
 }
 
 .menu-item {
 	display: flex;
 	justify-content: space-between;
 	padding: 2px;
-	color: #353535;
 	gap: 1rem;
 	padding-inline: 0.5rem;
 
 
 	&:hover {
-		outline: 2px solid darkgray;
+		outline: 2px solid var(--button-outline-color);
 		outline-offset: -2px;
 		border-radius: 6px;
 	}
@@ -103,12 +100,10 @@ div.submenu-hover-target {
 	overflow: hidden;
 	text-wrap: nowrap;
 	text-overflow: ellipsis;
-	color: #282828;
 	flex-grow: 1;
 }
 .menu-subtext {
 	cursor: pointer;
-	color: #0b5bda;
 	flex-grow: 1;
 	text-align: end;
 	font-size: smaller;
@@ -119,7 +114,6 @@ div.submenu-hover-target {
 }
 
 .menu-subtext :hover {
-	color: #095bda;
 }
 .menu-item:hover .menu-image {
 	visibility: visible;
